--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,8 @@
     margin:0;
     padding:0;
     list-style: none;
+    cursor: none;
+    
 } 
 
 html,body {
@@ -14,12 +16,14 @@ html,body {
     font-size: small;
     display: flex;
     flex-direction: column;
+    cursor: none;
 }
 
 a {
     color: white;
     text-decoration: none;
 }
+
 #index{
     display: flex;
     flex-direction: column;
@@ -73,15 +77,29 @@ header{
 }
 
 main {
-    width: 100%;
-    height: 80%;
     display: flex;
-    flex-direction: row;
-    justify-content:center;
-    align-items:center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    min-width: auto;
 }
-#main-pic {
-    width: 80%;
-    height: 80%;
-    justify-content: center;
+
+canvas{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 10px;
+    height: 10px;
+    background-color: red;
+    border-radius: 50%;
+}
+
+#dot{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 10px;
+    height: 10px;
+    background-color: greenyellow;
+    border-radius: 50%;
 }
