--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
   margin: 0;
   padding: 0;
   list-style: none;
-  cursor: none;
 }
 
 html, body {
@@ -20,7 +19,13 @@ html, body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  cursor: none;
+}
+
+#dot {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
 }
 
 a {
@@ -99,8 +104,8 @@ header {
           flex-direction: row;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  padding-left: 9%;
-  padding-right: 9%;
+  padding-left: 10%;
+  padding-right: 10%;
   padding-top: 1%;
   padding-bottom: 1%;
 }
@@ -117,6 +122,12 @@ header {
           align-items: center;
 }
 
+#navbar > div > img {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 main {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -130,23 +141,26 @@ main {
   min-width: auto;
 }
 
-canvas {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 10px;
-  height: 10px;
-  background-color: red;
-  border-radius: 50%;
+#main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  justify-items: center;
 }
 
-#dot {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 10px;
-  height: 10px;
-  background-color: greenyellow;
-  border-radius: 50%;
+#home {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 /*# sourceMappingURL=style.css.map */
