--- a/style.scss
+++ b/style.scss
@@ -2,8 +2,7 @@
     margin:0;
     padding:0;
     list-style: none;
-    cursor: none;
-    
+    //cursor: none;
 } 
 
 html,body {
@@ -16,7 +15,15 @@ html,body {
     font-size: small;
     display: flex;
     flex-direction: column;
-    cursor: none;
+    //cursor: none;
+}
+
+#dot{
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    //display: none;
+    border-radius: 50%;
 }
 
 a {
@@ -64,16 +71,19 @@ header{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    padding-left: 9%;
-    padding-right: 9%;
+    padding-left: 10%;
+    padding-right: 10%;
     padding-top: 1%;
     padding-bottom: 1%;;
 }
 
-#navbar > div  {
+#navbar > div {
     display: flex;
     justify-content:center;
     align-items:center;
+}
+#navbar > div > img {
+    justify-content: center;
 }
 
 main {
@@ -84,22 +94,18 @@ main {
     min-width: auto;
 }
 
-canvas{
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 10px;
-    height: 10px;
-    background-color: red;
-    border-radius: 50%;
+#main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-items: center;
 }
 
-#dot{
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 10px;
-    height: 10px;
-    background-color: greenyellow;
-    border-radius: 50%;
+#home{
+    display: flex;
+    justify-content: center;
 }
+
+
+
+
