--- a/style.css
+++ b/style.css
@@ -2,23 +2,22 @@
   margin: 0;
   padding: 0;
   list-style: none;
+  cursor: none;
 }
 
 html, body {
   height: 100%;
   width: 100%;
-  max-height: 100%;
-  font-family: 'Source Code Pro', monospace;
+  min-height: 300px;
+  min-width: 600px;
+  font-family: "Source Code Pro", monospace;
   color: white;
   background-color: black;
   font-size: small;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
+  justify-content: center;
+  justify-items: center;
 }
 
 #dot {
@@ -34,133 +33,101 @@ a {
 }
 
 #index {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   height: 100%;
   width: 100%;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
-#avatar {
+.avatar {
   border-radius: 50%;
   width: 200px;
   height: 200px;
-  -webkit-transition: -webkit-transform 400ms;
-  transition: -webkit-transform 400ms;
-  transition: transform 400ms;
-  transition: transform 400ms, -webkit-transform 400ms;
+  transition: transform 400ms ease-in-out;
+}
+.avatar:hover {
+  transform: scale(1.15);
 }
 
-#avatar:hover {
-  -webkit-transform: scale(1.15);
-          transform: scale(1.15);
+@keyframes slideInFromTop {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
-
 header {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   height: 20%;
   width: 100%;
   min-width: auto;
+  animation: 1s ease-out 0s 1 slideInFromTop;
 }
 
-#avatar-small {
+.avatar-small {
   border-radius: 50%;
   width: 50px;
   height: 50px;
-  -webkit-transition: -webkit-transform 400ms;
-  transition: -webkit-transform 400ms;
-  transition: transform 400ms;
-  transition: transform 400ms, -webkit-transform 400ms;
+  transition: transform 400ms ease-in-out;
+}
+.avatar-small:hover {
+  transform: rotate(360deg);
 }
 
-#avatar-small:hover {
-  -webkit-transform: rotate(360deg);
-          transform: rotate(360deg);
-}
-
-#navbar {
-  display: -webkit-box;
-  display: -ms-flexbox;
+.navbar {
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  flex-direction: row;
+  justify-content: space-around;
   padding-left: 10%;
   padding-right: 10%;
   padding-top: 1%;
   padding-bottom: 1%;
 }
 
-#navbar > div {
-  display: -webkit-box;
-  display: -ms-flexbox;
+.navbar > div {
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
-#navbar > div > img {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+.navbar > div > img {
+  justify-content: center;
 }
 
-main {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 100%;
+.main {
+  width: 80%;
   height: 100%;
-  min-width: auto;
-}
-
-#main {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: column;
+  justify-content: center;
   justify-items: center;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
-#home {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+@keyframes slideInFromBottom {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.main > div {
+  color: #ff8d24;
+  animation: 1s ease-in-out 0s 1 fadein;
+}
+
 /*# sourceMappingURL=style.css.map */
