--- a/style.scss
+++ b/style.scss
@@ -2,20 +2,27 @@
     margin:0;
     padding:0;
     list-style: none;
-    //cursor: none;
+    cursor: none;
 } 
 
 html,body {
+    //margin : 5px;
     height: 100%;
     width: 100%;
-    max-height: 100%;
+    min-height: 300px;
+    min-width: 600px;
+
     font-family: 'Source Code Pro', monospace;
     color: white;
     background-color: black;
     font-size: small;
+
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    justify-items: center;
     //cursor: none;
+
 }
 
 #dot{
@@ -40,34 +47,46 @@ a {
     align-items:center;
 }
 
-#avatar {
+.avatar {
  border-radius: 50%;
  width: 200px;
  height: 200px;
- transition: transform 400ms;
+ transition: transform 400ms ease-in-out;
  &:hover {
     transform: scale(1.15);
  }
 }
+@keyframes slideInFromTop {
+    0% {
+      transform: translateY(-100%);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
 header{
     display: flex;
     flex-direction: column;
     height: 20%;
     width: 100%;
     min-width: auto;
+
+    // Animation
+    animation: 1s ease-out 0s 1 slideInFromTop;
+    //padding: 30px;
 }
 
-#avatar-small{
+.avatar-small{
     border-radius: 50%;
     width: 50px;
     height: 50px;
-    transition: transform 400ms;
+    transition: transform 400ms ease-in-out;
     &:hover {
     transform: rotate(360deg);
  }
 }
 
-#navbar  {
+.navbar  {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -77,35 +96,52 @@ header{
     padding-bottom: 1%;;
 }
 
-#navbar > div {
+.navbar > div {
     display: flex;
     justify-content:center;
     align-items:center;
 }
-#navbar > div > img {
+.navbar > div > img {
     justify-content: center;
 }
 
-main {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    min-width: auto;
-}
 
-#main{
+.main {
+    width: 80%;
+    height: 100%;
+    //position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
     justify-items: center;
+    
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
-#home{
-    display: flex;
-    justify-content: center;
+@keyframes slideInFromBottom {
+    0% {
+      transform: translateY(100%);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
+
+  @keyframes fadein {
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
 }
 
+.main > div {
+    color: #ff8d24;
+    // Hide
+    //visibility: hidden;
+    //opacity: 0;
 
-
-
+    animation: 1s ease-in-out 0s 1 fadein;   
+}
